test/integration/cli-args/model-name/stanc.expected
  $ /mnt/home/bward/ceph/mutation/stanc3/stanc.exe --name=foo  8start_with_number.stan
[exit 0]
  $ /mnt/home/bward/ceph/mutation/stanc3/stanc.exe --name=foo  bad.stan
Semantic error in 'bad.stan', line 3, column 6 to column 9:
   -------------------------------------------------
     1:  data {
     2:    // declare matching model name should fail
     3:    int foo;  
               ^
     4:  }
     5:  parameters {
   -------------------------------------------------

Identifier 'foo' clashes with model name.
[exit 1]
  $ /mnt/home/bward/ceph/mutation/stanc3/stanc.exe --name=foo  good.stan
[exit 0]
